feat: add mq redis and peer speaking flows